--- a/victoriawebsite/src/index.css
+++ b/victoriawebsite/src/index.css
@@ -181,3 +181,100 @@ body:has(.card[data-color="green"]:hover) {
   box-shadow: 0.6vmin 0.6vmin #fff, 1vmin 1vmin #d2e4ff, 1vmin 1vmin #d2e4ff,
     0.65vmin 1vmin #d2e4ff, 1vmin 0.65vmin #d2e4ff;
 }
+
+
+/*github contribution calendar*/
+.container {
+  width: max-content; /* Calendar should not grow */
+  max-width: 100%; /* Do not remove - flexbox parents */
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.container rect {
+  stroke: rgba(3, 4, 20, 0.04);
+  stroke-width: 1px;
+  shape-rendering: geometricPrecision;
+}
+
+@media (prefers-color-scheme: dark) {
+  .container rect {
+    stroke: rgba(3, 4, 20, 0.04);
+  }
+}
+
+.scrollContainer {
+  max-width: 100%;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+
+.calendar {
+  display: block; /* SVGs are inline-block by default */
+  overflow: visible; /* Weekday labels are rendered left of the container */
+}
+
+.calendar text {
+  fill: currentColor;
+}
+
+.footer {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 4px 16px;
+  white-space: nowrap;
+}
+
+.legendColors {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  gap: 3px;
+}
+
+@keyframes loadingAnimation {
+  0% {
+    fill: var(--react-activity-calendar-loading);
+  }
+  50% {
+    fill: var(--react-activity-calendar-loading-active);
+  }
+  100% {
+    fill: var(--react-activity-calendar-loading);
+  }
+}
+
+/* react navbar */
+.navbar {
+  background-color: #333;
+  padding: 1rem;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+
+
+}
+
+.nav-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+}
+
+.nav-item {
+  margin: 0;
+}
+
+.nav-link {
+  color: white;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  transition: background-color 0.3s;
+}
+
+.nav-link:hover {
+  background-color: #555;
+}
